
Moqui Framework Release Notes

===========================================================================
Release 1.2.0 - TBD
===========================================================================

Moqui Framework release 1.2.0 is a minor new feature release and includes
a number of bug fixes too.

The new features include popup menus (using the new jQueryUI menu widget),
dynamic-options in XML Form drop-downs with dependency on other fields,
automatic optimization of queries on view-entities to old select member
entities necessary, support for UUID generated primary keys, expanded JCR
support and an Example Content screen, and a number of small improvements
that generally make the framework easier to use and more reliable.

There are some non-backward-compatible changes in this release including
elimination of id-very-long from the data type dictionary (expanding the id
and id-long types), and changed database configuration of subscreens to be
based on UserGroup instead of the individual UserAccount (this is a
primary-key change and may require a database metadata update and data
migration).

This release includes:

- Updated jQuery to 1.8.2 and jQuery UI to 1.9.0
- Updated Apache Camel to 2.10.1, Apache Derby to 10.9.1.0, Apache
  Jackrabbit to 2.5.2, Apache Shiro to 1.2.1, ehcache to 2.6.0, Groovy to
  2.0.5, and Quartz Scheduler to 2.1.6
- Support for Spock specification and unit testing framework run with the
  gradle "test" task, and a few entity and service unit tests
- XML Screens
  - Added popup type subscreens menu using new jQuery UI Menu widget to
    help compress header into single row of menus instead of layers of tabs
  - Moved JS file reference to webroot.xml instead of in the theme; all
    themes need them, and they are more closely related to HTML generated
  - Added subscreens.always-use-full-path attribute to use the full path in
    menus and such instead of minimal path; helpful for wiki and other